components/search-modal/element.css
*,
::before,
::after {
  box-sizing: border-box;
}

dialog {
  padding: 0;
  border: 0;

  @media (--screen-menu-full) {
    width: calc(var(--layout-content-max) + 1rem);
    max-height: calc(100% - var(--sticky-header-height) - 2rem);

    margin: calc(var(--sticky-header-height) + 1rem) auto 1rem;

    font-size: var(--font-size-large);

    background-color: var(--color-background-primary);
    border: 1px solid var(--color-border-primary);
    border-radius: 0.5rem;

    &::backdrop {
      background-color: light-dark(
        var(--color-white-alpha-75),
        var(--color-black-alpha-75)
      );
      backdrop-filter: blur(3px);
    }
  }

  @media (--screen-menu-hamburger) {
    width: 100%;
    max-width: 100%;
    height: 100%;
    max-height: 100%;

    margin: 0;

    font-size: var(--font-size-normal);
  }

  &[open] {
    display: grid;

    grid-template-areas:
      "search   close"
      "progress progress"
      "results  results";
    grid-template-rows: var(--navigation-height) min-content min-content;
    grid-template-columns: 1fr min-content;
  }
}

progress {
  grid-area: progress;
  margin: 0 1rem 0.5rem;

  @media (--screen-menu-hamburger) {
    margin-inline: 0.3rem;
  }
}

.close {
  grid-area: close;
  font-size: 1.37rem;

  @media (--screen-menu-full) {
    display: none;
  }
}

form {
  display: grid;

  grid-area: search;
  grid-template-columns: min-content 1fr;

  gap: 0.5rem;
  place-items: center;

  padding: 1rem;

  @media (--screen-menu-hamburger) {
    align-self: center;

    padding: 0.5rem;
    margin-left: 0.3rem;

    background-color: var(--color-background-primary);
    border: 1px solid var(--color-border-primary);
    border-radius: 0.5rem;
  }

  &::before {
    width: 1em;
    height: 1em;

    content: "";

    background-color: var(--color-border-secondary);

    mask-image: url("../icon/search.svg");
    mask-size: contain;
  }
}

input {
  width: 100%;

  padding: 0;
  margin: 0;

  font-size: inherit;

  outline: none;

  background-color: transparent;
  border: none;

  &::placeholder {
    color: var(--color-text-secondary);
  }
}

ul {
  grid-area: results;

  padding: 0;
  margin: 0;

  overflow: auto;

  overscroll-behavior: contain;

  &:has(li) {
    border-top: 1px solid var(--color-border-primary);
  }
}

li[data-selected] {
  background: var(--color-background-blue);
  border-color: var(--color-blue-50);
}

li {
  list-style-type: none;
  border-inline-start: 2px solid transparent;

  &:not([data-selected]):hover {
    background-color: var(--color-background-secondary);
  }
}

li > * {
  width: 100%;
  padding: 0.5rem 1.5rem;
}

a {
  display: grid;
  color: var(--color-link-normal);
  text-decoration: none;

  &:visited {
    color: var(--color-link-visited);
  }
}

.slug {
  font-size: var(--font-size-small);
  color: var(--color-text-secondary);
}

mark {
  color: var(--color-text-primary);
  background-color: var(--color-background-yellow);
}

